--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,9 @@
   },
   "keywords": ["ai", "oracle", "mystical", "api"],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  }
 }
