--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -4,6 +4,9 @@ builder = "NIXPACKS"
 [deploy]
 startCommand = "npm start"
 healthcheckPath = "/health"
-healthcheckTimeout = 60
+healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 3
+restartPolicyMaxRetries = 5
+
+[variables]
+NODE_ENV = "production"
